# cusomized-gpt

./: .gitignore  README.md  app.py  crawler.py  db.py  job.py  llm.py  main.py  pyproject.toml  sqlite.db  utils.py
static/css/: nakamuras-dandy-site.webflow.css
static/js/: model.js  mypage.js  webflow.js
template/: index.html  login.html  model.html  mypage.html
templates/: 404.html
